# kwork-auto-offer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bot/: main.py
config/: filters.json  templates.json
scraper/: kwork_scraper.py
storage/: database.py
